--- a/tests/Invisionware.Net.WebUitls.Tests/Invisionware.Net.WebUitls.Tests.csproj
+++ b/tests/Invisionware.Net.WebUitls.Tests/Invisionware.Net.WebUitls.Tests.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Invisionware.Net.WebUitls.Tests</RootNamespace>
     <AssemblyName>Invisionware.Net.WebUitls.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -22,6 +22,7 @@
     </SccAuxPath>
     <SccProvider>
     </SccProvider>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -48,7 +49,7 @@
       <HintPath>..\..\packages\FluentAssertions.4.19.2\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
     <Reference Include="Invisionware.Serialization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Invisionware.Serialization.1.1.1\lib\portable-net45+win8+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\Invisionware.Serialization.dll</HintPath>
+      <HintPath>..\..\packages\Invisionware.Serialization.1.1.2\lib\portable-net45+win8+wpa81+wp8+MonoAndroid10+xamarinios10+MonoTouch10\Invisionware.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
