--- a/tests/Invisionware.Net.GeoCoding.Google.Tests/packages.config
+++ b/tests/Invisionware.Net.GeoCoding.Google.Tests/packages.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Anotar.Serilog.Fody" version="3.3.0" targetFramework="net451" developmentDependency="true" />
   <package id="Autofac" version="4.6.0" targetFramework="net451" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net451" />
-  <package id="Fody" version="2.0.10" targetFramework="net451" developmentDependency="true" />
+  <package id="Fody" version="2.1.0-beta0001" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
@@ -12,7 +11,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="NUnit" version="3.7.0" targetFramework="net451" />
   <package id="NUnit3TestAdapter" version="3.8.0-alpha1" targetFramework="net451" />
-  <package id="Serilog" version="2.4.0" targetFramework="net451" />
+  <package id="Serilog" version="2.4.0" targetFramework="net451" requireReinstallation="true" />
   <package id="System.Collections" version="4.3.0" targetFramework="net451" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net451" />
   <package id="System.Linq" version="4.3.0" targetFramework="net451" />
