--- a/nuspec/Invisionware.Net.GeoCoding.nuspec
+++ b/nuspec/Invisionware.Net.GeoCoding.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
 	<metadata>
 		<id>Invisionware.Net.GeoCoding</id>
-		<version>1.1.3-pre14</version>
+		<version>1.1.4</version>
 		<title>Invisionware.Net.GeoCoding</title>
 		<authors>ravensorb</authors>
 		<owners>ravensorb</owners>
@@ -24,8 +24,8 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 
 			</group>
 			<group targetFramework="NetStandard1.1">
@@ -38,8 +38,8 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 			</group>
 			<group targetFramework="NetStandard1.2">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -51,8 +51,8 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 			</group>
 			<group targetFramework="NetStandard1.3">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -64,8 +64,8 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 			</group>
 			<group targetFramework="MonoAndroid">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -77,8 +77,8 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 			</group>
 			<group targetFramework="Xamarin.iOS">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -90,8 +90,8 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 			</group>
 			<group targetFramework=".NETPortable,Version=v4.5,Profile=Profile259">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -100,8 +100,8 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 			</group>
 			<group targetFramework=".NETPortable,Version=v4.5,Profile=Profile111">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -113,8 +113,8 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 			</group>
 			<group targetFramework=".NETPortable,Version=v4.5,Profile=Profile78">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -123,14 +123,12 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
-				<dependency id="Invisionware.Net" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
+				<dependency id="Invisionware.Net" version="1.1.4" />
 			</group>
 		</dependencies>
 	</metadata>
 	<files>
-		<!-- Content -->
-		<file src="..\docs\Invisionware.Net.GeoCoding.txt" target="content" />
 
 		<!-- Framework: Portable Profile 259 -->
 		<file src="..\src\Invisionware.Net.GeoCoding\bin\$Configuration$\netstandard1.1\Invisionware.Net.GeoCoding.dll" target="lib\portable-net45+win8+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
