--- a/nuspec/Invisionware.Net.nuspec
+++ b/nuspec/Invisionware.Net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
 	<metadata>
 		<id>Invisionware.Net</id>
-		<version>1.1.3-pre14</version>
+		<version>1.1.4</version>
 		<title>Invisionware.Net</title>
 		<authors>ravensorb</authors>
 		<owners>ravensorb</owners>
@@ -21,7 +21,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 			<group targetFramework="NetStandard1.1">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -30,7 +30,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 			<group targetFramework="NetStandard1.2">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -39,7 +39,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 			<group targetFramework="NetStandard1.3">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -48,7 +48,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 			<group targetFramework="MonoAndroid">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -57,7 +57,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 			<group targetFramework="Xamarin.iOS">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -66,7 +66,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 			<group targetFramework=".NETPortable,Version=v4.5,Profile=Profile259">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -75,7 +75,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 			<group targetFramework=".NETPortable,Version=v4.5,Profile=Profile111">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -84,7 +84,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 			<group targetFramework=".NETPortable,Version=v4.5,Profile=Profile78">
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
@@ -93,7 +93,7 @@
 
 				<dependency id="XLabs.Ioc" version="2.3.0-pre04" />
 
-				<dependency id="Invisionware.Serialization" version="1.1.3-pre14" />
+				<dependency id="Invisionware.Serialization" version="1.1.4" />
 			</group>
 		</dependencies>
 	</metadata>
