Adding some missing files

--- a/.gitignore
+++ b/.gitignore
@@ -256,7 +256,14 @@ paket-files/
 tools/Addins/
 tools/Cake/
 tools/GitVersion.CommandLine
+tools/NUnit.ConsoleRunner
 tools/nuget.exe
+tools/CredentialProvider.VSS.exe
+tools/VSS.NuGet.AuthHelper.exe
+tools/settingsUtils.cake
+tools/versionUtils.cake
+tools/VSS.NuGet.AuthHelper.exe
+tools/packages.config.md5sum
 
 # GIT
 git.password
