--- a/src/Invisionware.Net.GeoCoding.Interfaces/Invisionware.Net.GeoCoding.Interfaces.csproj
+++ b/src/Invisionware.Net.GeoCoding.Interfaces/Invisionware.Net.GeoCoding.Interfaces.csproj
@@ -10,9 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fody" Version="2.1.0-beta0001" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
-    <PackageReference Include="Serilog" Version="2.4.0" />
+    <PackageReference Include="Fody" Version="2.1.2" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.4.0" />
+    <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
     <PackageReference Include="System.Globalization" Version="4.3.0" />
