--- a/tests/Invisionware.Net.WebUitls.Tests/packages.config
+++ b/tests/Invisionware.Net.WebUitls.Tests/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="4.19.2" targetFramework="net451" />
-  <package id="Invisionware.Serialization" version="1.1.2" targetFramework="net46" />
+  <package id="FluentAssertions" version="4.19.4" targetFramework="net46" />
+  <package id="Invisionware.Serialization" version="1.1.4" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="NUnit" version="3.7.0" targetFramework="net451" />
-  <package id="NUnit3TestAdapter" version="3.8.0-alpha1" targetFramework="net451" />
-  <package id="Serilog" version="2.4.0" targetFramework="net451" requireReinstallation="true" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
+  <package id="NUnit" version="3.8.1" targetFramework="net46" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net46" />
+  <package id="Serilog" version="2.5.0" targetFramework="net46" />
 </packages>
