--- a/nuspec/Invisionware.Net.RestEase.nuspec
+++ b/nuspec/Invisionware.Net.RestEase.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
 	<metadata>
 		<id>Invisionware.Net.RestEase</id>
-		<version>1.1.4</version>
+		<version>1.1.5-pre06</version>
 		<title>Invisionware.Net.RestEase</title>
 		<authors>ravensorb</authors>
 		<owners>ravensorb</owners>
@@ -19,15 +19,19 @@
 			<group>
 				<dependency id="Newtonsoft.Json" version="9.0.1" />
 				<dependency id="Serilog" version="2.5.0" />
-        <dependency id="RestEase" version="1.4.3" />
-        <dependency id="System.Xml.XmlSerializer" version="4.3.0"/>
-      </group>
+				<dependency id="RestEase" version="1.4.3" />
+				<dependency id="System.Xml.XmlSerializer" version="4.3.0" />
+				<dependency id="Invisionware.Net" version="1.1.5-pre06" />
+			</group>
 		</dependencies>
 	</metadata>
 	<files>
 		<!-- Framework: NetStandard1.1 -->
-		<file src="..\src\Invisionware.Net.WebUtils\bin\$Configuration$\netstandard1.1\Invisionware.Net.RestEase.dll" target="lib\netstandard1.1" />
-		<file src="..\src\Invisionware.Net.WebUtils\bin\$Configuration$\netstandard1.1\Invisionware.Net.RestEase.pdb" target="lib\netstandard1.1" />
+		<file src="..\src\Invisionware.Net.RestEase\bin\$Configuration$\netstandard1.1\Invisionware.Net.RestEase.dll" target="lib\netstandard1.1" />
+		<file src="..\src\Invisionware.Net.RestEase\bin\$Configuration$\netstandard1.1\Invisionware.Net.RestEase.pdb" target="lib\netstandard1.1" />
 
+	  <!-- Framework: .Net 4.6 -->
+	  <file src="..\src\Invisionware.Net.RestEase.Net46\bin\$Configuration$\Invisionware.Net.RestEase.Net46.dll" target="lib\net46" />
+	  <file src="..\src\Invisionware.Net.RestEase.Net46\bin\$Configuration$\Invisionware.Net.RestEase.Net46.pdb" target="lib\net46" />
 	</files>
 </package>
