--- a/src/Invisionware.Net.RestEase.Net46/packages.config
+++ b/src/Invisionware.Net.RestEase.Net46/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="4.19.4" targetFramework="net461" />
   <package id="Invisionware.Serialization" version="1.1.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="NUnit" version="3.8.1" targetFramework="net461" />
+  <package id="RestEase" version="1.4.3" targetFramework="net461" />
+  <package id="Serilog" version="2.5.0" targetFramework="net461" />
+  <package id="System.Xml.XmlSerializer" version="4.3.0" targetFramework="net461" />
 </packages>
