--- a/src/Invisionware.Net.WebUtils/Invisionware.Net.WebUtils.csproj
+++ b/src/Invisionware.Net.WebUtils/Invisionware.Net.WebUtils.csproj
@@ -10,12 +10,11 @@
     <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
   </PropertyGroup>
 
+  <Import Project="..\Invisionware.Net.WebUtils.Shared\Invisionware.Net.WebUtils.Shared.projitems" Label="Shared" />
+
   <ItemGroup>
     <PackageReference Include="Invisionware.Serialization" Version="1.1.4" />
-    <PackageReference Include="Microsoft.NETCore.Portable.Compatibility" Version="1.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="Serilog" Version="2.5.0" />
-    <PackageReference Include="System.Net.Http" Version="4.3.2" />
   </ItemGroup>
 
 </Project>
