--- a/src/Invisionware.Net/Invisionware.Net.csproj
+++ b/src/Invisionware.Net/Invisionware.Net.csproj
@@ -4,7 +4,10 @@
     <TargetFramework>netstandard1.1</TargetFramework>
   </PropertyGroup>
 
+  <Import Project="..\Invisionware.Net.Shared\Invisionware.Net.Shared.projitems" Label="Shared" />
+
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Serilog" Version="2.5.0" />
   </ItemGroup>
 
