--- a/tests/Invisionware.Net.RestEase.Tests/Invisionware.Net.RestEase.Tests.csproj
+++ b/tests/Invisionware.Net.RestEase.Tests/Invisionware.Net.RestEase.Tests.csproj
@@ -1,26 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3ADF37AB-5A97-45FA-9C36-F4B7B1AED668}</ProjectGuid>
+    <ProjectGuid>{A8B4E04F-75C7-4210-87E5-FF3FE4E71949}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Invisionware.Net.GeoCoding.Google.Tests</RootNamespace>
-    <AssemblyName>Invisionware.Net.GeoCoding.Google.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <RootNamespace>Invisionware.Net.RestEase.Tests</RootNamespace>
+    <AssemblyName>Invisionware.Net.RestEase.Tests.Disabled</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -41,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.6.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Autofac.4.6.0\lib\net45\Autofac.dll</HintPath>
-    </Reference>
     <Reference Include="FluentAssertions, Version=4.19.4.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\FluentAssertions.4.19.4\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
@@ -57,27 +46,17 @@
       <HintPath>..\..\packages\NUnit.3.8.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="XLabs.IOC, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\XLabs.IoC.2.3.0-pre05\lib\netstandard1.0\XLabs.IOC.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="XLabs.IOC.Autofac, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\XLabs.IoC.Autofac.2.3.0-pre05\lib\netstandard1.0\XLabs.IOC.Autofac.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GoogleGeoCoderProvider.Tests.cs" />
+    <Compile Include="ClientFactory.Tests.cs" />
+    <Compile Include="RestEaseHybridResponseDeserializer.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -85,35 +64,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding.Google\Invisionware.Net.GeoCoding.Google.csproj">
-      <Project>{6baae104-3b8a-441f-8736-8dc9f4a27afa}</Project>
-      <Name>Invisionware.Net.GeoCoding.Google</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding.Interfaces\Invisionware.Net.GeoCoding.Interfaces.csproj">
-      <Project>{a01bd832-a9ee-48b7-a311-49110be604f1}</Project>
-      <Name>Invisionware.Net.GeoCoding.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Invisionware.Net.GeoCoding\Invisionware.Net.GeoCoding.csproj">
-      <Project>{4a9088ad-8447-4812-9800-8e5625cf99d0}</Project>
-      <Name>Invisionware.Net.GeoCoding</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Invisionware.Net.WebUtils\Invisionware.Net.WebUtils.csproj">
-      <Project>{C944CD78-EC8C-4A93-B63D-5A3E1C27089D}</Project>
-      <Name>Invisionware.Net.WebUtils</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="FodyWeavers.xml" />
+    <ProjectReference Include="..\..\src\Invisionware.Net.Net46\Invisionware.Net.Net46.csproj">
+      <Project>{1b15bf5b-802e-4110-ac41-d6372a02ba1d}</Project>
+      <Name>Invisionware.Net.Net46</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\Invisionware.Net.RestEase.Net46\Invisionware.Net.RestEase.Net46.csproj">
+      <Project>{19f411bf-f0f3-4b4a-b1aa-951cdc0c116f}</Project>
+      <Name>Invisionware.Net.RestEase.Net46</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
