--- a/tests/Invisionware.Net.Tests/packages.config
+++ b/tests/Invisionware.Net.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="4.19.4" targetFramework="net461" />
-  <package id="Invisionware.Serialization" version="1.1.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="net461" />
 </packages>
